--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -96,10 +96,13 @@ android {
     namespace "com.incdecredux"
     defaultConfig {
         applicationId "com.incdecredux"
+        missingDimensionStrategy 'react-native-camera', 'general'
+
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        
     }
 
     splits {
@@ -151,8 +154,12 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
+
+  
+
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
@@ -168,3 +175,4 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
